--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/head": "^2.0.0",
     "lucide-vue-next": "^0.563.0",
+    "pinia": "^3.0.4",
     "vite-ssg": "^28.2.2",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
