--- a/package.json
+++ b/package.json
@@ -5,25 +5,40 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build && npm run generate:feeds",
+    "build:check": "vue-tsc -b && vite build && npm run generate:feeds",
+    "type-check": "vue-tsc --noEmit",
+    "generate:feeds": "tsx scripts/generateSitemap.ts && tsx scripts/generateRSS.ts",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/markdown-it-anchor": "^4.0.4",
     "@vueuse/head": "^2.0.0",
+    "flexsearch": "^0.8.212",
     "lucide-vue-next": "^0.563.0",
+    "markdown-it-anchor": "^9.2.0",
     "pinia": "^3.0.4",
     "vite-ssg": "^28.2.2",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@mdit-vue/plugin-sfc": "^3.0.2",
+    "@mdit-vue/plugin-title": "^3.0.2",
+    "@mdit-vue/plugin-toc": "^3.0.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.20",
+    "gray-matter": "^4.0.3",
     "postcss": "^8.4.49",
+    "rss": "^1.2.2",
+    "shiki": "^3.22.0",
     "tailwindcss": "^4.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
+    "unplugin-vue-markdown": "^29.2.0",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
   }
